# dreambbs

./: .gitignore  .travis.yml  00.-INSTALL.md  ANSI-Escape-Code-Standard-Format-zh_tw.md  ANSI-Escape-Code-Standard-Format.md  ANSI-Format-zh_tw.md  BBS-Lua-Change-zh_tw.md  BoardReadingHistory-zh_tw.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CODING-STYLE-zh_tw.md  DENY-zh_tw.md  Deny-Suspension-System-zh_tw.md  Home.md  INDENT.md  INSTALL.md  Install-(v2.0).md  Issues-zh_tw.md  LEGACY-CHANGES.nocem.md  LEGACY-FAQ.md  LEGACY-FEATURE.md  LEGACY-INSTALL.md  LEGACY-MAPLE3.FEATURE.md  LEGACY-NOCEM.md  LEGACY-README.ACL.md  LEGACY-README.ADMIN.md  LEGACY-README.BM.md  LEGACY-README.CRONTAB.md  LEGACY-README.INNBBSD.md  LEGACY-README.MANIFEST.md  LEGACY-README.SONG.md  LEGACY-README.SYSOP.md  LEGACY-README.TAG.md  LEGACY-README.UTIL.md  LEGACY-README.md  LEGACY-README.nocem.md  LEGACY-SITE.md  LEGACY-sendmail.cf.md  Makefile  (+36 more)
.github/workflows/: build.yml  codeql-analysis.yml  sent_repo_dispatch.yml  sync_wiki.yml  sync_with_wiki.yml
bgopherd/: Makefile  gemd.c
bmtad/: Makefile  bmtad.c  bmtad_OLD.c  mailer.ic
bpop3d/: Makefile  bpop3d.c
docs/: ANCESTOR  CHANGELOG  CHANGELOG_new  Copyright  INSTALL  VERSION  pftermtest.patch
docs/old/: FAQ  FEATURE  INSTALL  MAPLE3.FEATURE  README  README.ACL  README.ADMIN  README.BM  README.CRONTAB  README.INNBBSD  README.MANIFEST  README.SONG  README.SYSOP  README.TAG  README.UTIL  SITE  sendmail.cf
include/: Makefile  acl.ic  attr.h  attrdef.h  battr.h  bbs.h  bbs_script.h  config.h  cppdef.h  dao.h  dns.h  fnv_hash.h  global.h  global_def.h  hdr.h  logger.h  modes.h  perm.h  pfterm.h  pip.h  pipstruct.h  popup.h  proto.h  rpg.h  skin.h  so.h  splay.h  struct.h  theme.h  timetype.h  xchat.h
innbbsd/: CMakeLists.txt  Makefile  Makefile.gnu  bbslib.c  bbslib.h  bbslink.c  channel.c  convcode.c  history.c  innbbsconf.h  inntobbs.c  inntobbs.h  nntp.h  nocem.c  nocem.h  rec_article.c
lib/: CMakeLists.txt  Makefile  Makefile.gnu  acct.c  acl.c  acl_has.c  archiv32.c  archiv32m.c  attr_lib.c  chrono32.c  dao.p  date_str.c  dl_lib.c  dns.c  dns.p  dns_ident.c.old  dns_name.c  dns_open.c  dns_smtp.c  f_cat.c  f_cp.c  f_ln.c  f_lock.c  f_map.c  f_mv.c  f_new.c  f_open.c  f_path.c  f_rm.c  file.c  hdr_fpath.c  header.c  is_fname.c  isnot.c  keeplog.c  logger.c  mak_dirs.c  malloc-bsd.c  malloc.c.innd  mime.c  (+39 more)
maple/: CMakeLists.txt  Makefile  Makefile.bsd  Makefile.gnu  acct.c  banmail.c  bbsd.c  bbslua.c  bbsluaext.c  bbsruby.c  bguard.c  board.c  cache.c  cb.sh  edit.c  favorite.c  gem.c  mail.c  make_export.conf.in  maple.p  menu.c  more.c  myfavorite.c  pfterm.c  pmore.c  popupmenu.c  post.c  socket.c  tags  talk.c  visio.c  window.c  xchatd.c  xover.c
patch/: hot_mail_bug.patch  wsproxy.patch
patch/mailbackup/: 0001-testing-itoc-s-patch-mail-backup.patch  0002-Solving-a-PERM-bug-violately.patch  0003-Solving-a-PERM-bug-violately.patch
patches/: pftermtest.patch
patches/mailbackup/: 0009-cuser.email-only.patch  0010-for-solving-SegFault.patch
sample/: 0001-Makefile-try-clang-to-compatible-with-FreeBSD.patch  CMakeLists.txt  Makefile  bbs-sshd.service.in  bbsd.service  bbsd.service.in  bbsd_unixsocket.service  bbsd_unixsocket.service.in  config.h  crontab  crontab.in  dreambbs.conf  dreambbs.service  dreambbs23.service  startbbs.service  startbbs.service.in  xchatd.service  xchatd.service.in
sample/bbs/: .BRD
sample/sh/: checkACCT.sh  checkbrdDIR.sh
scripts/: CMakeLists.txt  Makefile  checkACCT.sh  checkACCT.sh.in  checkbrdDIR.sh  checkbrdDIR.sh.in  checkusrDIR.sh  checkusrDIR.sh.in  clean.sh  clean.sh.in  start.sh  start.sh.in  top.sh  top.sh.in  verinfo.sh
scripts/wsproxy/: README.md  wsproxy.lua
so/: CMakeLists.txt  Makefile  Makefile.gnu  admin.c  adminutil.c  aloha.c  ascii.c  bank.c  banmail.c  bbslua.c  bbsruby.c  bj.c  bj.c.money  brdstat.c  bwboard.c  cb.sh  chat.c  chatmenu.c  classtable2.c  cleanrecommend.c  contact.c  dreye.c  emailpage.c  gamef.c  guessnum.c  icq.c  innbbs.c  km.c  list.c  mailgem.c  memorandum.c  mine.c  netwhois.c  newboard.c  news_viewer.c  observe.c  passwd.c  personal.c  pip.c  pipfun.c  (+14 more)
src/: ChangeLog  Makefile  install.sh
src/bgopherd/: daemon.c  gemd  gopherd.c
src/bmtad/: bmtad  hash.ic  host_ht.ic  mail.acl
src/bpop3d/: bpop3d
src/include/: attr.h  battr.h  bbs.h  bbsctrl.h  bbsnet.h  config.h  dao.h  decode.ic  dns.h  modes.h  news.h  pip.h  proto.h  rpg.h  struct.h  theme.h  webbbs.h
src/innbbsd/: Makefile  bbslib.c  bbslink  innbbsd  nocem.c  rec_article.c
src/lib/: acl_addr.c  attr_lib.c  dao.p  dl_lib.c  dns.c  dns_addr.c  dns_ident.c  f_img.c  f_path.c  f_suck.c  hash32.c  hdr_prune.c  hdr_stamp.c  is_fpath.c  malloc.c.perl  malloc.c.perl.5  rec_bot.c  rec_del.c  rec_ins.c  splay.c  str_add.c  str_ansi.c  str_cmp.c  str_dup.c  str_fpath.c  str_lcat.c  str_ndup.c  str_rev.c  str_rle.c  str_stamp.c  str_ttl.c  strlcat.c  strlcpy.c
src/maple/: Makefile  acct.c  banmail.c  bbsd  bbsd.c  bguard  bguard.c  board.c  cache.c  mail.c  maple.p  menu.c  more.c  myfavorite.c  pmore.c  post.c  tags  talk.c  window.c  xchatd  xchatd.c
src/so/: adminutil.c  ascii.c  bank.c  bbcall.c  bbsnet.c  bbsnet2.c  bj.c  chess.c  (+30 more)
test/: CMakeLists.txt  Makefile  lib_f_cp.c  lib_f_mv.c  lib_f_rm.c  lib_from_parse.c  lib_splay.c  lib_str_decode.c  lib_str_pat.c  lib_str_xor.c  lib_xsort.c  test.h  testscript.sh  testsize.c
util/: CMakeLists.txt  Makefile  Makefile.gnu  account.c  account.c.problem  acl-sort.c  acpro.c  addpost.c  addsong.c  backup.c  backupbrd.c  backupusr.c  base64encode.c  bbsmail.c  bbsmail.c.orig  bmw-dump.c  brdcheck  brdcheck.c  brdmail  brdmail.c  brdstat.c  camera.c  cb.sh  checkemail.c  classtable_alert.c  clean_acl.c  countage.c  countbirth.c  counter.c  countstar.c  dump-brdstat.c  expire.c  expire.c.old  flowlog.c  gem-check.c  gem-index.c  hdr-dump.c  ipconv.c  mailexpire.c  mailpost.c  (+30 more)
web/: .htaccess  ANSIcolorcover.php  LICENSES  README.md  RSS.php  config-sample.php  config.php  config.php.sam  cover.php  db.php  index.php  start.sql  uaocode.php
(+369 files in other folders)
